add feature: concurrently install

--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"start": "concurrently \"npm run api\" \"npm run rtmpserver\" \"npm run client\" "
+		"start": "concurrently \"npm run api\" \"npm run rtmpserver\" \"npm run client\" ",
+		"clientInstall": "npm install",
+		"apiInstall": "cd api && npm install",
+		"rtmpserverInstall": "cd rtmpserver && npm install",
+		"install-all": "concurrently \"npm run apiInstall\" \"npm run rtmpserverInstall\" \"npm run clientInstall\" "
 	},
 	"eslintConfig": {
 		"extends": [
